# Test-Sender

./: .directory  CMakeLists.txt  TestSender.kdev4  main.cpp
.kdev4/: TestSender.kdev4
SerialDevice/: CMakeLists.txt
SerialDevice/src/core/: command.cpp  command.h  protocol.cpp  protocol.h
SerialDevice/src/core/command/: GetADCDataCollected.h  SetResistance.h
SerialDevice/src/dev/: device.h  serialdevice.cpp  serialdevice.h  serialdevicedriver.cpp  serialdevicedriver.h
src/: main.cpp
src/core/: DriverAdapter.cpp  DriverAdapter.h  command.cpp  command.h  performer.cpp  performer.h  protocol.cpp  protocol.h
src/dev/: device.h  serialdevice.cpp  serialdevice.h  serialdevicedriver.cpp  serialdevicedriver.h
src/gui/: WControl.cpp  WControl.h  WControl.ui  WPB30319.cpp  WPB30319.h  WPB30319.ui
