CMAKE_MINIMUM_REQUIRED(VERSION 3.1)
PROJECT(PB30319)

SET(GLOBAL PROPERTY USE_FOLDERS ON)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/bin")

IF (${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1z -pthread -Wall")
ELSEIF (${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /bigobj /wd4251 /wd4275")
  ADD_DEFINITIONS (
    -DNOMINMAX
    -DWIN32_LEAN_AND_MEAN
	  -D_SCL_SECURE_NO_WARNINGS
	  -D_CRT_SECURE_NO_WARNINGS
  )
ENDIF()

FIND_PACKAGE(Qt5Core REQUIRED)
FIND_PACKAGE(Qt5Widgets REQUIRED)

SET(CMAKE_DEBUG_POSTFIX d)

SET (PB30319_HEADERS 
  src/gui/WPB30319.h
  src/gui/WControl.h
  src/core/DriverAdapter.h
)

SET (PB30319_SOURCE
  src/main.cpp
  src/gui/WPB30319.cpp
  src/gui/WControl.cpp
  src/core/DriverAdapter.cpp
)

SET(PB30319_UI_FILES
  src/gui/WPB30319.ui
  src/gui/WControl.ui
)

QT5_WRAP_UI(PB30319_UI_GENERATED_FILES
  ${PB30319_UI_FILES}
)

ADD_SUBDIRECTORY(SerialDevice)

ADD_EXECUTABLE(PB30319 WIN32
  ${PB30319_HEADERS}
  ${PB30319_SOURCE}
  ${PB30319_UI_GENERATED_FILES}
)

ADD_DEPENDENCIES(PB30319
  SerialDevice
)

TARGET_INCLUDE_DIRECTORIES(PB30319 
  PRIVATE ${CMAKE_SOURCE_DIR}/src/
          ${CMAKE_BINARY_DIR}
          ${PROJECT_BINARY_DIR}
          ${PROJECT_SOURCE_DIR}
)

TARGET_LINK_LIBRARIES(PB30319
  Qt5::Core
  Qt5::Widgets
  SerialDevice
)

INSTALL(TARGETS PB30319 RUNTIME DESTINATION bin)

SET_TARGET_PROPERTIES(PB30319 PROPERTIES
  CXX_STANDARD 17
  CXX_STANDARD_REQUIRED YES
  CXX_EXTENSIONS NO
  AUTOMOC ON
  OUTPUT_NAME PB30319
  PROJECT_LABEL "PB30319"
)

SOURCE_GROUP("Header Files" FILES ${PB30319_HEADERS} )
SOURCE_GROUP("Source Files" FILES ${PB30319_SOURCE} )
SOURCE_GROUP("GUI Files" FILES ${PB30319_UI_FILES} )
SOURCE_GROUP("Generated Files" FILES ${PB30319_UI_GENERATED_FILES} )
